[gd_scene load_steps=6 format=3 uid="uid://mu6236s52i2y"]

[ext_resource type="PackedScene" uid="uid://bkovgk4uy3l8f" path="res://Scenes/Level/level.tscn" id="1_kaguf"]
[ext_resource type="Script" path="res://Scenes/Game/game.gd" id="1_xqwab"]
[ext_resource type="PackedScene" uid="uid://d14c6rgad3oso" path="res://Entities/EmojiPicker/emoji_picker.tscn" id="3_i3c3s"]
[ext_resource type="PackedScene" uid="uid://i4iuphw4tv8u" path="res://Scenes/StartMenu/start_menu.tscn" id="3_k1vku"]
[ext_resource type="PackedScene" uid="uid://cow7eb2on4a54" path="res://Entities/ChatBox/chat_box.tscn" id="4_n5283"]

[node name="Game" type="Node"]
script = ExtResource("1_xqwab")

[node name="Level" parent="." instance=ExtResource("1_kaguf")]
unique_name_in_owner = true
visible = false

[node name="UserInterface" type="Control" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="EmojiPicker" parent="UserInterface" instance=ExtResource("3_i3c3s")]
unique_name_in_owner = true

[node name="ChatBox" parent="UserInterface" instance=ExtResource("4_n5283")]
unique_name_in_owner = true
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 1.0
offset_top = 411.0
offset_right = 380.0
offset_bottom = 647.0
grow_horizontal = 1
grow_vertical = 1

[node name="StartMenu" parent="." instance=ExtResource("3_k1vku")]
unique_name_in_owner = true

[connection signal="next" from="StartMenu" to="." method="_on_start_menu_next"]
